--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ android {
 
 dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0-alpha01'
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0' // Зависимость для RecyclerViewActions
     androidTestImplementation 'androidx.test.ext:junit:1.3.0-alpha01'
 
     testImplementation 'junit:junit:4.+'
