--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,8 +49,10 @@ android {
 
 dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0-alpha01'
-    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0' // Зависимость для RecyclerViewActions
     androidTestImplementation 'androidx.test.ext:junit:1.3.0-alpha01'
+
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0' // Зависимость для RecyclerViewActions
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0' //Зависимость для проверки перехода по ссылкам
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test:rules:1.7.0-alpha01'
