--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,13 +10,13 @@ plugins {
 }
 
 android {
-    compileSdkVersion 32
+    compileSdkVersion 31
     buildToolsVersion "30.0.3"
 
     defaultConfig {
         applicationId "ru.iteco.fmhandroid"
         minSdkVersion 21
-        targetSdkVersion 32
+        targetSdkVersion 29
         versionCode 14
         versionName "1.0.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
@@ -48,15 +48,44 @@ android {
 }
 
 dependencies {
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0-alpha01'
-    androidTestImplementation 'androidx.test.ext:junit:1.3.0-alpha01'
+    //рабочий вариант
+//    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0-alpha01'
+//    androidTestImplementation 'androidx.test.ext:junit:1.3.0-alpha01'
+//
+//    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0' // Зависимость для RecyclerViewActions
+//    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0' //Зависимость для проверки перехода по ссылкам
+//
+    testImplementation 'junit:junit:4.+'
+//    androidTestImplementation 'androidx.test:rules:1.7.0-alpha01'
+//    androidTestImplementation 'androidx.test:runner:1.4.0'
+    //конец рабочий вариант
+
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
 
     androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0' // Зависимость для RecyclerViewActions
-    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.4.0' //Зависимость для проверки перехода по ссылкам
+    androidTestImplementation 'androidx.test.espresso:espresso-intents:3.5.0' //Зависимость для проверки перехода по ссылкам
 
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test:rules:1.7.0-alpha01'
-    androidTestImplementation 'androidx.test:runner:1.4.0'
+    androidTestImplementation 'androidx.test:rules:1.5.0'
+    androidTestImplementation 'androidx.test:runner:1.5.0'
+
+
+//    def espresso_version = '3.5.0'
+//    def test_version = '1.5.0'
+//    def junit_ext_version = '1.1.5'
+//
+//    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
+//    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
+//    androidTestImplementation "androidx.test.espresso:espresso-intents:$espresso_version"
+//    androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
+//    androidTestImplementation "androidx.test:rules:$test_version"
+//    androidTestImplementation "androidx.test:runner:$test_version"
+
+    // Добавляем правильный hamcrest
+    androidTestImplementation 'org.hamcrest:hamcrest-core:1.3'
+    androidTestImplementation 'org.hamcrest:hamcrest-library:1.3'
+
+    //testImplementation 'junit:junit:4.13.2'
 
     def retrofit_version = "2.9.0"
     def retrofit_gson_version = "2.9.0"
@@ -102,4 +131,15 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.0.3')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
+}
+
+configurations.all {
+    resolutionStrategy.eachDependency { details ->
+        if (details.requested.group == 'org.hamcrest') {
+            if (details.requested.name == 'hamcrest-core' || details.requested.name == 'hamcrest-library') {
+                details.useVersion '1.3'
+                details.because("Avoid mixing hamcrest 2.2 with 1.3 – leads to IncompatibleClassChangeError")
+            }
+        }
+    }
 }
