--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,11 +15,14 @@ android {
 
     defaultConfig {
         applicationId "ru.iteco.fmhandroid"
-        minSdkVersion 21
+        minSdkVersion 26
         targetSdkVersion 29
         versionCode 14
         versionName "1.0.0"
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
+        //testInstrumentationRunnerArguments clearPackageData: 'false', disableUninstall: 'true'
+        testInstrumentationRunnerArguments clearPackageData: 'false', disableUninstall: 'true', no_uninstall: 'true'
+
     }
 
     compileOptions {
@@ -47,6 +50,8 @@ android {
     }
 }
 
+//apply plugin: 'io.qameta.allure'
+
 dependencies {
     //рабочий вариант
 //    androidTestImplementation 'androidx.test.espresso:espresso-core:3.7.0-alpha01'
@@ -69,17 +74,7 @@ dependencies {
     androidTestImplementation 'androidx.test:rules:1.5.0'
     androidTestImplementation 'androidx.test:runner:1.5.0'
 
-
-//    def espresso_version = '3.5.0'
-//    def test_version = '1.5.0'
-//    def junit_ext_version = '1.1.5'
-//
-//    androidTestImplementation "androidx.test.espresso:espresso-core:$espresso_version"
-//    androidTestImplementation "androidx.test.espresso:espresso-contrib:$espresso_version"
-//    androidTestImplementation "androidx.test.espresso:espresso-intents:$espresso_version"
-//    androidTestImplementation "androidx.test.ext:junit:$junit_ext_version"
-//    androidTestImplementation "androidx.test:rules:$test_version"
-//    androidTestImplementation "androidx.test:runner:$test_version"
+    androidTestImplementation 'io.qameta.allure:allure-kotlin-android:2.4.0'
 
     // Добавляем правильный hamcrest
     androidTestImplementation 'org.hamcrest:hamcrest-core:1.3'
@@ -133,13 +128,6 @@ dependencies {
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
 }
 
-configurations.all {
-    resolutionStrategy.eachDependency { details ->
-        if (details.requested.group == 'org.hamcrest') {
-            if (details.requested.name == 'hamcrest-core' || details.requested.name == 'hamcrest-library') {
-                details.useVersion '1.3'
-                details.because("Avoid mixing hamcrest 2.2 with 1.3 – leads to IncompatibleClassChangeError")
-            }
-        }
-    }
-}
+
+
+
